--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </style>
 </head>
 <body>
-    <h1>Feliz día de la primavera, no te lo puedo dar pero soy una crack que sabe programar</h1>
+    <h1>No te lo puedo dar pero soy una crack que sabe programar eyou</h1>
     <canvas id="sunflowerCanvas" width="500" height="500"></canvas>
 
     <script>
